--- a/tests/test.html
+++ b/tests/test.html
@@ -2,12 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Test page for accessible bar charts</title>
 
     <link type="text/css" rel="stylesheet" href="../css/a11ycharts.css" />
+    <style type="text/css">
+      body {
+        font-family: Helvetica, Arial, sans-serif;
+        color: #333333;
+      }
+
+      h2, h3, h4 {
+        margin: 0 0 0.6em 0;
+      }
+
+      h3 { color: #666666; }
+
+      .section {
+        padding: 1em 2em;
+      }
+    </style>
 
     <script type="text/javascript"
             src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
@@ -18,8 +31,34 @@
     </script>
   </head>
   <body>
+    <h1>a11yChart Tests</h1>
 
+    <div class="section">
+      <h2>Horizontal bar chart</h2>
 
+      <h3>Popular fruits by quantity</h3>
 
+      <ul id="horizontal-bar-chart-test">
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>Timeline chart</h2>
+
+      <h3>Fruits eaten over time</h3>
+
+      <h4>December 2007</h4>
+      <ul id="timeline-chart-test">
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>Sparkline charts</h2>
+
+      <h3>Fruits eaten in the last 14 days by type</h3>
+
+      <ul id="sparkline-charts-test">
+      </ul>
+    </div>
   </body>
 </html>
