--- a/tests/test.html
+++ b/tests/test.html
@@ -23,7 +23,7 @@
     </style>
 
     <script type="text/javascript"
-            src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+            src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script type="text/javascript" src="../js/a11ycharts.js"></script>
     <script type="text/javascript" src="./testdata.js"></script>
     <script type="text/javascript">
