--- a/tests/test.html
+++ b/tests/test.html
@@ -35,6 +35,10 @@
             "data": horizontalBarChartData
           });
 
+          $("#horizontal-bar-chart-width-test").a11yChart({
+            "data": horizontalBarChartData
+          });
+
           // test the timeline chart generation
 
 
@@ -48,12 +52,21 @@
     <h1>a11yChart Tests</h1>
 
     <div class="section">
-      <h2>Horizontal bar chart</h2>
+      <h2>Horizontal bar chart - full width</h2>
 
       <h3>Popular fruits by quantity</h3>
 
       <ul id="horizontal-bar-chart-test">
       </ul>
+    </div>
+
+    <div class="section">
+      <h2>Horizontal bar chart - restricted width</h2>
+
+      <h3>Popular fruits by quantity</h3>
+
+      <div id="horizontal-bar-chart-width-test" style="width: 17em;">
+      </div>
     </div>
 
     <div class="section">
