--- a/tests/test.html
+++ b/tests/test.html
@@ -40,6 +40,10 @@
           });
 
           // test the timeline chart generation
+          $("#timeline-chart-test").a11yChart({
+            "type": "timeline",
+            "data": timelineChartData
+          });
 
 
           // test the sparkline charts generation
