sparkline charts implemented

--- a/tests/test.html
+++ b/tests/test.html
@@ -45,9 +45,11 @@
             "data": timelineChartData
           });
 
-
           // test the sparkline charts generation
-
+          $("#sparkline-charts-test").a11yChart({
+            "type": "sparklines",
+            "data": sparklineChartData
+          });
         });
       })(jQuery);
     </script>
